pipelines/argocd-apps/platform-apps/managed/e2e/components/portal/overlays/dev/patches/deploy-portal-static.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-static
  namespace: e2e
spec:
  template:
    spec:
      containers:
        - name: static
          image: gcr.io//e2e/portal/dev/static:latest
