pipelines/argocd-apps/platform-apps/managed/e2e/components/portal/overlays/dev/patches/ingress-portal.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: portal
  namespace: e2e
spec:
  tls:
  - hosts:
    - dev.american-broomstick.com
    secretName: portal-tls
  rules:
  - host: dev.american-broomstick.com
    http:
      paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: portal-static-webserver
              port:
                number: 8080
